# stragg

./: .gitignore  CMakeLists.txt
data/: SRIM2013.xml
include/: ChebyshevPolynomial.h  DiracFunction.h  GaussFunction.h  HermitePolynomial.h  LandauFunction.h  Layer.h  SRIM.h  SRIMTable.h  VavilovAiryFunction.h  VavilovEdgeworthFunction.h  VavilovMoyalFunction.h
python/: ChebyshevPolynomial.i  DiracFunction.i  GaussFunction.i  HermitePolynomial.i  LandauFunction.i  Layer.i  SRIM.i  SRIMTable.i  VavilovAiryFunction.i  VavilovEdgeworthFunction.i  VavilovMoyalFunction.i  stragg.i
src/: ChebyshevPolynomial.cc  DiracFunction.cc  GaussFunction.cc  HermitePolynomial.cc  LandauFunction.cc  Layer.cc  SRIM.cc  SRIMTable.cc  VavilovAiryFunction.cc  VavilovEdgeworthFunction.cc  VavilovMoyalFunction.cc
test/: animation.py  srim.py  test.py
